CCU-60 - Added active speaker overlay in tiles mode, and mute button and quality indicator in Attendees list

--- a/src/styles/common/MediaQueries.less
+++ b/src/styles/common/MediaQueries.less
@@ -212,6 +212,15 @@
         width: 80%;
       }
     }
+    .onactivespeakeroverlay {
+      top: 3px;
+      left: 3px;
+      font-size: 12px;
+
+      p {
+        line-height: 30px;
+      }
+    }
     width: ~"calc(100% - 55px)";
     .layout-container {
       p,
