CCU-76 Support for Audio transparency mode Pass Dolby Voice enabled down to AttendeesSettings.js component Added Audio transparency switch to ConferencePreConfigContainer.js and AttendeesSettings.js; Added actions for turning on/off Audio transparency

--- a/src/styles/common/MediaQueries.less
+++ b/src/styles/common/MediaQueries.less
@@ -171,6 +171,31 @@
 }
 
 @media screen and (max-width: 767px) {
+  .settings-preconfig .content {
+    width: 100% !important;
+
+    .loadbar {
+      margin: auto;
+      width: auto;
+
+      li {
+        width: 13px;
+        height: 13px;
+        margin-left: 2.5px;
+
+        .ins {
+          width: 13px;
+          height: 13px;
+        }
+      }
+    }
+
+    .group-enable {
+      label {
+        font-size: 16px;
+      }
+    }
+  }
   .settings-preconfig .content .start-conference {
     width: 100% !important;
     max-width: 100% !important;
