fix: add props in reducer to detect back camera with helper function

--- a/src/styles/components/ConferenceAttendees.less
+++ b/src/styles/components/ConferenceAttendees.less
@@ -674,6 +674,12 @@
               border: 1px solid #3e44fe;
             }
           }
+          .myself-not-mirrored {
+            .video-participant {
+              border-radius: 8px;
+              border: 1px solid #3e44fe;
+            }
+          }
         }
         .participant-bar {
           display: none;
