CCU-102 - Added overlay with "Play audio" button that pops up on Audio blocked event; Skip preconfig check for mobile devices and listener only mode

--- a/src/styles/common/MediaQueries.less
+++ b/src/styles/common/MediaQueries.less
@@ -442,10 +442,16 @@
     .onboardingmessage-fadeout {
       font-size: 12px;
     }
+    .onboardingmessagewithconfirmation-fadeout {
+      font-size: 12px;
+    }
     .onboardingmessagewithaction-hidden, .onboardingmessagewithdescription-hidden {
       font-size: 12px;
     }
     .onboardingmessage {
+      font-size: 12px;
+    }
+    .onboardingmessagewithconfirmation {
       font-size: 12px;
     }
     .onboardingmessagewithaction-error, .onboardingmessagewithdescription-error {
@@ -1702,10 +1708,16 @@
     .onboardingmessage-fadeout {
       font-size: 12px;
     }
+    .onboardingmessagewithconfirmation-fadeout {
+      font-size: 12px;
+    }
     .onboardingmessagewithaction-hidden, .onboardingmessagewithdescription-hidden {
       font-size: 12px;
     }
     .onboardingmessage {
+      font-size: 12px;
+    }
+    .onboardingmessagewithconfirmation {
       font-size: 12px;
     }
     .onboardingmessagewithaction-error, .onboardingmessagewithdescription-error {
