--- a/src/styles/components/ConferenceAttendees.less
+++ b/src/styles/components/ConferenceAttendees.less
@@ -257,6 +257,68 @@
     top: 50%;
     transform: translateY(-50%);
   }
+  .onboardingmessagewithconfirmation-hidden {
+    display: none;
+  }
+
+  .onboardingmessagewithconfirmation {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    .overlay-wrapper {
+      -webkit-transition: opacity 0.25s ease-in-out;
+      -moz-transition: opacity 0.25s ease-in-out;
+      -ms-transition: opacity 0.25s ease-in-out;
+      -o-transition: opacity 0.25s ease-in-out;
+      position: relative;
+      max-width: 500px;
+      margin: auto;
+      background: #13141C;
+      border-radius: 4px;
+      color: #FFF;
+      .overlay-title {
+        padding: 10px;
+        display: flex;
+        border-bottom: thin solid #7f7f7f;
+        .title-text {
+          width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+        .icon-close {
+          position: absolute;
+          right: 10px;
+        }
+      }
+      .overlay-text {
+        text-align: center;
+        padding: 10px;
+        max-height: 40%;
+        overflow: auto;
+
+        .button {
+          margin-right: 10px;
+          margin-left: 10px;
+          width: 40%;
+          // padding: 5px 5px;
+          // border-radius: 8px;
+          border: none;
+          font-size: 11px;
+          padding: 5px 5px 5px 5px;
+          background-image: linear-gradient(225deg, #AA33FF 0%, #3E44FE 100%);
+          //background-image: linear-gradient(225deg, #c0e249 0%, #48d57c 100%);
+          color: #fff;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
   .layout-container {
     position: absolute;
     top: 25px;
