feat: temporary VFS implementation for testing on dev-staging env

--- a/src/styles/components/AttendeesSettings.less
+++ b/src/styles/components/AttendeesSettings.less
@@ -264,6 +264,33 @@
         margin-bottom: 18px;
       }
 
+        .number-input-mode {
+          margin-bottom: 18px;
+          input {
+            display: inline-block;
+          }
+          label {
+            width: auto;
+            display: inline-block;
+            margin: auto;
+            padding-left: 8px;
+            color: #fff;
+            font-size: 18px;
+            font-family: 'DINNextLTPro-Regular';
+            cursor: pointer;
+            text-align: left;
+          }
+          button {
+            padding: 4px 8px 4px 8px;
+            margin-left: 4px;
+            cursor: pointer;
+            border-radius: 8px;
+            background-color: #3E44FE;
+            border: none;
+            color: #fff;
+          }
+        }
+
       .hint-text {
         margin-top: 32px;
         color: #979797;
