--- a/src/styles/components/ConferenceAttendees.less
+++ b/src/styles/components/ConferenceAttendees.less
@@ -663,13 +663,18 @@
       position: relative;
       max-width: 100%;
       flex: none !important;
+
+      .participant-bar {
+        background-color: rgba(0, 0, 0, 0.5);
+      }
     }
     .stream-media {
       min-width: 67px;
       min-height: 67px;
       background-color: #000;
       max-width: 80px;
-      max-height: 105px;
+      max-height: 135px;
+      height: 135px;
       border-radius: 100%;
       overflow: hidden;
       position: relative;
@@ -701,53 +706,6 @@
       align-items: center;
       //background-color: #f5f5f5;
     }
-    .list1 {
-      #video-undefined-video-on,
-      #video-undefined-video-off {
-        .tile-video {
-          background: url("../../static/images/bg/jeremy-bishop-123463-unsplash.jpg");
-          background-repeat: no-repeat;
-          background-size: cover;
-          .stream-media {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            .video-participant {
-              width: 220px;
-              height: auto;
-              object-fit: contain;
-              position: absolute;
-              bottom: 15px;
-              left: 15px;
-            }
-          }
-          .container-avatar-vumeter {
-            width: auto;
-            position: absolute;
-            bottom: 15px;
-            left: 15px;
-            top: auto;
-            height: auto;
-          }
-          .myself {
-            .video-participant {
-              border-radius: 8px;
-              border: 1px solid #3e44fe;
-            }
-          }
-          .myself-not-mirrored {
-            .video-participant {
-              border-radius: 8px;
-              border: 1px solid #3e44fe;
-            }
-          }
-        }
-        .participant-bar {
-          display: none;
-        }
-      }
-    }
     .tiles-list {
       display: flex; //flex-direction: row;
       flex-wrap: wrap;
@@ -755,10 +713,60 @@
       margin: 0px;
       padding: 0px;
       width: 100%;
+      background: linear-gradient(#13141c 0%, #424248 100%);
+
+      &.list0 {
+          // background: url("../../static/images/bg/jeremy-bishop-123463-unsplash.jpg");
+          // background-repeat: no-repeat;
+          // background-size: cover;
+          background: linear-gradient(#13141c 0%, #424248 100%)
+      }
       .vxt-widget-fullscreen-on & {
         height: 100%;
         overflow: hidden;
         justify-content: center;
+      }
+
+      .tile-local-item {
+        position: absolute;
+        width: 100%;
+        bottom: 102px;
+        left: 15px;
+        z-index: 9;
+
+        &#video-local-video-on,
+        &#video-local-video-off {
+          .tile-video {
+            .stream-media {
+              .video-participant {
+                width: 220px;
+                height: auto;
+                object-fit: cover;
+              }
+            }
+            .container-avatar-vumeter {
+              display: none;
+            }
+            .myself {
+              .video-participant {
+                border-radius: 8px;
+                border: 1px solid #3e44fe;
+              }
+            }
+            .myself-not-mirrored {
+              .video-participant {
+                border-radius: 8px;
+                border: 1px solid #3e44fe;
+              }
+            }
+            .participant-bar {
+              display: none;
+            }
+          }
+          .tile-legend {
+            display: none;
+          }
+        }
       }
     }
     .tile-item {
@@ -801,6 +809,7 @@
           vertical-align: middle;
           min-height: 25px;
           align-items: center;
+          background: rgba(0, 0, 0, 0.5);
           /* margin: auto; */
         }
 
@@ -826,13 +835,14 @@
           max-height: 120px; //width: 100%;
         }
         .vxt-widget-fullscreen-on & {
-          position: absolute;
+          // position: absolute;
+          position: relative;
           top: 0;
           left: 0;
           width: 100%;
           text-align: center;
           top: 50%;
-          height: 100%;
+          height: auto;
           transform: translateY(-50%);
           -ms-transform: translateY(-50%);
           -moz-transform: translateY(-50%);
@@ -842,16 +852,19 @@
           // background-repeat: no-repeat;
           // background-size: cover;
           // background-color: #000c31;
-          background: linear-gradient(#13141c 0%, #424248 100%);
+          // background: linear-gradient(#13141c 0%, #424248 100%);
           .stream-media {
             width: 100%;
-            height: 100%;
+            height: auto;
+            max-height: 100%;
+            position: relative;
             // display: flex;
             // align-items: center;
             // justify-content: center;
             .video-participant {
               width: 100%;
-              height: 100%;
+              height: auto;
+              max-height: calc(100vh - 10px);
               object-fit: contain;
             }
           }
@@ -866,7 +879,7 @@
             }
           }
           .preview-avatar {
-            max-height: 80% !important;
+            // max-height: 80% !important;
             border-radius: 50%;
             height: 120px;
             width: 120px;
@@ -890,6 +903,36 @@
       }
     }
 
+    &[data-number-user="0"] {
+      .tile-local-item {
+        height: ~"calc(100% - 87px)";
+        min-width: 100%;
+        max-width: 100%;
+        width: auto;
+        position: relative;
+        bottom: 0;
+        left: 0;
+
+        .tile-video {
+          min-height: 100%;
+          height: 100%;
+          .stream-media {
+            min-height: 100%;
+            height: 100%;
+            .video-participant {
+              border: none !important;
+              border-radius: 0 !important;
+              width: 100% !important;
+              height: 100% !important;
+              object-fit: contain !important;
+            }
+          }
+        }
+      }
+      .participant-bar {
+        //margin: 0px 0 0% -90px;
+      }
+    }
     &[data-number-user="1"] {
       .tile-item {
         height: ~"calc(100% - 87px)";
@@ -1150,7 +1193,9 @@
               width: 100%;
               .stream-media {
                 video {
-                  max-height: 110px !important;
+                  max-height: 135px;
+                  height: 135px;
+                  object-fit: cover;
                 }
               }
             }
@@ -1464,6 +1509,7 @@
     padding: 3px 25px/2;
     @size: 25px;
     .transition(background-color 0.2s ease-in-out);
+    // background-color: rgba(0, 0, 0, 0.5);
     background-color: rgba(81, 89, 115, 1);
     // border-bottom: 3px solid rgba(81, 89, 115, 1);
     div.name {
@@ -1479,6 +1525,7 @@
       min-height: 25px;
       white-space: nowrap;
       min-width: 120px;
+      max-width: 120px;
       text-align: left;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -1886,6 +1933,7 @@
     opacity: 0.85;
     align-items: center;
     justify-content: center;
+    z-index: 99;
     p {
       padding: 15px 50px;
       margin: auto;
@@ -1950,7 +1998,7 @@
       }
     }
   }
-  .participant-mute {
+  .participant-mute, .participant-camera {
     flex: 0 !important;
     .icon-mute {
       color: @mutedColor;
