--- a/src/styles/components/AttendeesChat.less
+++ b/src/styles/components/AttendeesChat.less
@@ -285,6 +285,80 @@
   }
 }
 
+.attendees-chat {
+  // height: calc(100% - 75px) !important;
+  #chat-scrollbar {
+    .message-list {
+      overflow-x: hidden !important;
+      /* width */
+      &::-webkit-scrollbar {
+        width: 4px;
+      }
+
+      /* Track */
+      &::-webkit-scrollbar-track {
+        background: rgba(0, 0, 0, 0.85)
+      }
+
+      /* Handle */
+      &::-webkit-scrollbar-thumb {
+        background: rgba(255, 255, 255, 0.8);
+        border-radius: 2px;
+      }
+
+      .message-item {
+        padding: 5px 0;
+        img {
+          border-radius: 50%
+        }
+        .item-text {
+          color: rgba(255, 255, 255, 1);
+          font-weight: 400;
+          padding: 6px 12px 0 6px;
+          word-break: break-all;
+
+          span {
+            color: rgba(255, 255, 255, 0.6);
+            font-weight: 600;
+          }
+        }
+      }
+    }
+  }
+
+  // .container-input-chat {
+  //   position: relative !important;
+  //   bottom: -5px !important;
+  // }
+  .text-small .text-muted {
+    text-align: center;
+    font-size: 14px;
+    margin-top: 6px;
+  }
+}
+
+.attendees-chat .container-input-chat {
+  // .container-attach {
+  //   display: none;
+  // }
+  .container-input {
+    width: 87.5% !important;
+    input {
+      // border-radius: 30px 0px 0px 30px;
+      text-indent: 10px;
+    }
+  }
+  // .container-send {
+  //   a {
+  //     img {
+  //       content: url('../../static/images/icons/icon-plus.svg');
+  //       margin-top: 2px !important;
+  //       height: 34px;
+  //     }
+  //   }
+  // }
+}
+
 .vxt-widget-mode-on {
   .attendees-chat {
     height: 100%;
