--- a/src/styles/components/ConferenceLoading.less
+++ b/src/styles/components/ConferenceLoading.less
@@ -36,6 +36,29 @@
   max-width: 480px;
   margin: auto;
 
+  .retry-devices {
+    padding: 10px 50px;
+    background-color: #00AFEF;
+    color: #fff;
+    font-size: 16px;
+    font-family: 'DINNextLTPro-Regular';
+    line-height: 20px;
+    border-radius: 50px;
+    text-align: center;
+    cursor: pointer;
+    align-items: center;
+    display: flex;
+    display: flow-root;
+    border: none;
+    margin-top: 35px;
+    max-width: 50%;
+    margin: auto;
+    justify-content: center;
+    a {
+      margin: auto;
+    }
+  }
+
   .voxeet-loading-logo-container {
     text-align: center;
     margin-bottom: 25px;
