--- a/src/styles/components/ConferenceAttendees.less
+++ b/src/styles/components/ConferenceAttendees.less
@@ -1512,7 +1512,7 @@
     min-height: 25px;
     margin-left: -105px;
     .rounded(100px);
-    padding: 3px 25px/2;
+    padding: 3px 12.5px;
     @size: 25px;
     .transition(background-color 0.2s ease-in-out);
     background-color: rgba(0, 0, 0, 0.5);
@@ -1619,7 +1619,7 @@
     margin-top: 12px;
     cursor: pointer;
     .rounded(100px);
-    padding: 0 25px/2;
+    padding: 0 12.5px;
     @size: 25px;
     .transition(background-color 0.2s ease-in-out);
     background-color: rgba(0, 0, 0, 0.5);
