CCSA-76 Add a new button "create DVC state dump"

--- a/src/styles/components/AttendeesSettings.less
+++ b/src/styles/components/AttendeesSettings.less
@@ -193,6 +193,28 @@
         margin-top: 32px;
         margin-bottom: 32px;
       }
+      .create-state-dump {
+        padding: 10px 50px;
+        background-color: #00AFEF;
+        color: #fff;
+        font-size: 16px;
+        font-family: 'DINNextLTPro-Regular';
+        line-height: 20px;
+        border-radius: 50px;
+        text-align: center;
+        cursor: pointer;
+        align-items: center;
+        display: flex;
+        display: flow-root;
+        border: none;
+        margin-top: 35px;
+        max-width: 90%;
+        margin: auto;
+        justify-content: center;
+        a {
+          margin: auto;
+        }
+      }
       .switch-enable {
 
         &.disabled-form {
