--- a/src/styles/components/AttendeesChat.less
+++ b/src/styles/components/AttendeesChat.less
@@ -182,6 +182,24 @@
     }
   }
 
+  .chat-content-external{
+    padding: 0.75rem 0.75rem 0.4rem 0.75rem;
+    // color: #777777;
+    color: #d8d8d8;
+    font-weight: 200;
+    font-size: 15px;
+    font-family: "DINNextLTPro-Regular";
+    border-radius: 16px 16px 16px 2px;
+    background-color: #1b6ba4;
+    // background-color: #ebebeb;
+    word-wrap: break-word;
+    text-align: left;
+    a {
+      color: #d8d8d8;
+      font-weight: 600;
+    }
+  }
+
   .chat-content-myself {
     color: #d8d8d8;
     font-weight: 200;
